--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Montavue 3D Printing</title>
+  <title>Printsmith Studio</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
