--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </section>
 
   <footer>
-    &copy; 2025 Montavue 3D Printing
+    &copy; 2025 Printsmith Studio
   </footer>
 </body>
 </html>
